--- a/index.html
+++ b/index.html
@@ -63,14 +63,13 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-up">
-      <h1>Expo ESCOM</h1>
+      <h1>Expo ESCOM 2020</h1>
       <h2>Lugar en donde las grandes ideas pueden ser presentadas</h2>
       <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
     </div>
   </section><!-- End Hero -->
 
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
@@ -112,7 +111,6 @@
             </div><!-- End .content-->
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
