--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Expo ESCOM</title>
-  <meta content="" name="descriptison">
+  <meta content="Proyecto web para escom" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link rel="icon" href="assets/img/logoESCOM.png">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -80,7 +79,7 @@
               <p>
                 Nuestros estudiantes presentan proyectos de diferentes ámbitos para la solución de problemas de la vida real. 
               </p>
-              <a href="#portfolio" class="about-btn">Ver galería <i class="bx bx-chevron-right"></i></a>
+              <a href="#portfolio" class="about-btn scrollto">Ver galería <i class="bx bx-chevron-right"></i></a>
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
