--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Nuestro tel&eacute;fono</h3>
-              <p>5537241461</p>
+              <p>55 5729 6000</p>
             </div>
           </div>
         </div>
@@ -457,7 +457,7 @@
               <p>
                 Av. Juan de Dios B&aacute;tiz <br>
                 Nueva Industrial Vallejo 07743, CDMX<br><br>
-                <strong>Tel&eacute;fono:</strong>5537241461<br>
+                <strong>Tel&eacute;fono:</strong>55 5729 6000<br>
                 <strong>Correo:</strong> escom@ipn.mx<br>
               </p>
               <div class="social-links mt-3">
